--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@ var:
   categories_path : /categories.html
   tags_path : /tags.html
 
-production_url : http://username.github.com # or your custom domain name
-title : My Blog =)
+production_url : http://hpcorona.github.com # or your custom domain name
+title : W0lfb1t
 
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
+  name : Hilario Perez Corona
+  email : hpcorona@gmail.com
+  github : hpcorona
+  twitter : hpcorona
