--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,13 @@
 permalink: /:categories/:year/:month/:day/:title 
 auto: true
 pygments: true
+markdown: kramdown
 var:
   archive_path: /archive.html
   categories_path : /categories.html
   tags_path : /tags.html
 
-production_url : http://hpcorona.github.com # or your custom domain name
+production_url : http://wolfbit.com # or your custom domain name
 title : W0lfb1t
 
 author :
